[package]
name = "editline"
version = "0.0.4"
edition = "2021"
rust-version = "1.56"
authors = ["Ed"]
description = "A platform-agnostic line editor with history and full editing capabilities"
license = "MIT OR Unlicense"
repository = "https://github.com/edadma/editline"
keywords = ["readline", "line-editor", "repl", "terminal", "cli"]
categories = ["command-line-interface", "text-editors"]
readme = "README.md"

[lib]
name = "editline"
path = "src/lib.rs"

[dependencies]

[target.'cfg(all(unix, not(target_os = "none")))'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(all(windows, not(target_os = "none")))'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winbase", "handleapi", "consoleapi", "processenv"], optional = true }

[features]
default = ["std"]
std = ["libc", "winapi"]

[[example]]
name = "microbit_repl"
required-features = []

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[target.'cfg(target_arch = "arm")'.dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
microbit-v2 = "0.15"
alloc-cortex-m = "0.4"
embedded-io = "0.6"
