[package]
name = "editline"
version = "0.0.18"
edition = "2021"
rust-version = "1.56"
authors = ["Ed"]
description = "A platform-agnostic line editor with history and full editing capabilities"
license = "MIT OR Unlicense"
repository = "https://github.com/edadma/editline"
keywords = ["readline", "line-editor", "repl", "terminal", "cli"]
categories = ["command-line-interface", "text-editors"]
readme = "README.md"

[lib]
name = "editline"
path = "src/lib.rs"

[dependencies]
microbit-v2 = { version = "0.15", optional = true }
rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"], optional = true }
rp2040-boot2 = { version = "0.3", optional = true }
fugit = { version = "0.3", optional = true }
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
panic-halt = { version = "0.2", optional = true }
alloc-cortex-m = { version = "0.4", optional = true }
embedded-io = { version = "0.6", optional = true }
usb-device = { version = "0.3", optional = true }
usbd-serial = { version = "0.2", optional = true }

[target.'cfg(all(unix, not(target_os = "none")))'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(all(windows, not(target_os = "none")))'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winbase", "handleapi", "consoleapi", "processenv", "wincontypes", "winuser"], optional = true }

[features]
default = ["std"]
std = ["libc", "winapi"]
microbit = ["microbit-v2", "embedded-io", "cortex-m", "cortex-m-rt", "panic-halt", "alloc-cortex-m"]
rp_pico_usb = ["rp2040-hal", "rp2040-boot2", "fugit", "usb-device", "usbd-serial", "cortex-m", "cortex-m-rt", "panic-halt", "alloc-cortex-m"]

[[example]]
name = "microbit_repl"
required-features = ["microbit"]

[[example]]
name = "rp_pico_usb_repl"
required-features = ["rp_pico_usb"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"

